--- a/sidebar.html
+++ b/sidebar.html
@@ -45,10 +45,8 @@
         </button>
         <div class="collapse" id="orders-collapse" style="">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded">New</a></li>
-            <li><a href="#" class="link-dark rounded">Processed</a></li>
-            <li><a href="#" class="link-dark rounded">Shipped</a></li>
-            <li><a href="#" class="link-dark rounded">Returned</a></li>
+            <li><a href="#" class="link-dark rounded">Anual</a></li>
+            <li><a href="#" class="link-dark rounded">Mensual</a></li>
           </ul>
         </div>
       </li>
