--- a/public/assets/javascript/home.html
+++ b/public/assets/javascript/home.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <!-- Paleta de colores -->
-    <link rel="stylesheet" href="../css/paleta_colores.css">
-    <script src="../javascript/header_footer.js" defer></script>
+    <link rel="stylesheet" href="../../includes/footer.html">
+    <script src="../assets/javascript/header_footer.js" defer></script>
 </head>
 <body class="bg-white text-dark">
 
