--- a/public/pages/Emergencia/tipoEmergencia.html
+++ b/public/pages/Emergencia/tipoEmergencia.html
@@ -203,10 +203,8 @@
                     <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
-                <div class="modal-body">
-                    <p><strong>ID Tipo:</strong> <span id="verId"></span></p>
-                    <p><strong>Nombre:</strong> <span id="verNombre"></span></p>
-                    <p><strong>Grupo:</strong> <span id="verGrupo"></span></p>
+                <div class="modal-body" id="modalVerBody">
+                   <!-- Body dinamico del modal-->
                 </div>
 
                 <div class="modal-footer">
