--- a/public/pages/Emergencia/tipoEmergencia.html
+++ b/public/pages/Emergencia/tipoEmergencia.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tipos de emergencia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
