--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -157,7 +157,7 @@
             <div class="col-6 col-sm-4 col-md-2 text-center">
                 <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
                     <i class="bi bi-credit-card fs-2 mb-2"></i>
-                    <span>Carnets</span>
+                    <a href="Carnet/CarnetCRUD.html"><span>Carnets</span></a>
                 </button>
             </div>
 
