--- a/public/pages/Salidas/vistaSalidas.html
+++ b/public/pages/Salidas/vistaSalidas.html
@@ -56,11 +56,11 @@
                 <div id="filtroTabla" class="m-0 row d-flex justify-content-around"> <!-- Filtro -->
                     <div class="col-md-3 d-flex align-items-center m-1"> <!-- Cada campo del filtro será un col-md-x (ajustar) -->
                         <label class="m-2" for="n_funcionario">n_Funcionario:</label>
-                        <input placeholder="n_Funcionario" id="n_funcionario" type="text" class="form-control form-control-sm mt-1 filtro" data-col="">
+                        <input placeholder="n_Funcionario" id="n_funcionario" type="text" class="form-control form-control-sm mt-1 filtro" data-col="1">
                     </div>
                     <div class="col-md-3 d-flex align-items-center m-1"> <!-- Cada campo del filtro será un col-md-x (ajustar) -->
                         <label class="m-2" for="matricula">Matricula:</label>
-                        <input placeholder="Matricula" id="matricula" type="text" class="form-control form-control-sm mt-1 filtro" data-col="">
+                        <input placeholder="Matricula" id="matricula" type="text" class="form-control form-control-sm mt-1 filtro" data-col="0">
                     </div>
                     <div class="col-md-4 m-1 d-lg-flex gap-2">
                         <label class="m-2" >Fecha:</label>
@@ -112,7 +112,7 @@
             
             <!-- Contenedor insertar -->
             <div class="contenedorInsertar container mt-5 p-4 border rounded">
-                <h5 class="text-center mb-4">Registro de Vehículo</h5>
+                <h5 class="text-center mb-4">Registro salidas</h5>
                 <form id="formVehiculo" class="mx-auto">
 
                     <div class="row mb-3">
