--- a/public/pages/Persona/PersonaCRUD.html
+++ b/public/pages/Persona/PersonaCRUD.html
@@ -124,31 +124,31 @@
                 <form id="formInsertar" class="mx-auto">
                     <!-- Campos en la misma fila -->
                     <div class="row mb-3">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="DNI">DNI:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="DNI" data-col="2">   
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="nombre">Nombre:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="nombre" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="apellido">Apellido:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="apellido" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="telefono">Telefono:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="telefono" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="Correo">Correo:</label>
                             <input type="email" class="form-control form-control-sm mt-1 filtro" id="Correo" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="F_Ingreso">F_Ingreso_Diputacion:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label for="T_Arriba" class="m-2 form-label">T_Arriba</label>
                             <select class="form-select" id="T_Arriba">
                                 <option value="">Seleccione talla...</option>
@@ -156,7 +156,7 @@
                                 <option value="2">Vehículo 2</option>
                             </select>       
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label for="T_Abajo" class=" m-2 form-label">T_Abajo</label>
                             <select class="form-select" id="T_Abajo">
                                 <option value="">Seleccione talla...</option>
@@ -164,11 +164,11 @@
                                 <option value="2">Vehículo 2</option>
                             </select>    
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="Localidad">Localidad:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="Localidad" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label for="provincia" class=" m-2 form-label">Provincia</label>
                             <select class="form-select" id="provincia">
                                 <option value="">Seleccione provincia...</option>
@@ -176,11 +176,11 @@
                                 <option value="2">Vehículo 2</option>
                             </select>    
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="domicilio">Domicilio:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="domicilio" data-col="2">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="T_Emergencia">Telefono_Emergecia:</label>
                             <input type="text" class="form-control form-control-sm mt-1 filtro" id="T_Emergencia" data-col="2">
                         </div>
@@ -210,22 +210,69 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="formEditar">
-                        <div class="mb-3">
-                            <label for="editIdTipo" class="form-label">ID Tipo</label>
-                            <input type="text" class="form-control" id="editIdTipo" name="id_tipo" readonly>
+                <form id="formEditar" class="mx-auto">
+                    <!-- Campos en la misma fila -->
+                    <div class="row mb-3">
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="nombre">Nombre:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="nombre" data-col="2">
                         </div>
-                        <div class="mb-3">
-                            <label for="editNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="editNombre" name="nombre" required>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="apellido">Apellido:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="apellido" data-col="2">
                         </div>
-                        <div class="mb-3">
-                            <label for="editGrupo" class="form-label">Grupo</label>
-                            <input type="text" class="form-control" id="editGrupo" name="grupo" required>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="telefono">Telefono:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="telefono" data-col="2">
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="Correo">Correo:</label>
+                            <input type="email" class="form-control form-control-sm mt-1 filtro" id="Correo" data-col="2">
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="F_Ingreso">F_Ingreso_Diputacion:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label for="T_Arriba" class="m-2 form-label">T_Arriba</label>
+                            <select class="form-select" id="T_Arriba">
+                                <option value="">Seleccione talla...</option>
+                                <option value="1">Vehículo 1</option>
+                                <option value="2">Vehículo 2</option>
+                            </select>       
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label for="T_Abajo" class=" m-2 form-label">T_Abajo</label>
+                            <select class="form-select" id="T_Abajo">
+                                <option value="">Seleccione talla...</option>
+                                <option value="1">Vehículo 1</option>
+                                <option value="2">Vehículo 2</option>
+                            </select>    
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="Localidad">Localidad:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="Localidad" data-col="2">
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label for="provincia" class=" m-2 form-label">Provincia</label>
+                            <select class="form-select" id="provincia">
+                                <option value="">Seleccione provincia...</option>
+                                <option value="1">Vehículo 1</option>
+                                <option value="2">Vehículo 2</option>
+                            </select>    
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="domicilio">Domicilio:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="domicilio" data-col="2">
+                        </div>
+                        <div class="col-sm-12 ">
+                            <label class="m-2" for="T_Emergencia">Telefono_Emergecia:</label>
+                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="T_Emergencia" data-col="2">
+                        </div>
+                    </div>
+                </form>
+            </div>
+                <div class="d-flex justify-content-center gap-2 modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Cancelar
                     </button>
@@ -234,6 +281,28 @@
                     </button>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalEliminarLabel">Confirmar eliminación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Estás seguro de que deseas eliminar este registro?
+                    <p class="text-muted mb-0">Esta acción no se puede deshacer.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Cancelar
+                    </button>
+                    <button type="button" class="btn btn-danger" id="btnConfirmarEliminar">
+                        Eliminar
+                    </button>
+                </div>
+            </div> 
         </div>
     </div>
 
