--- a/public/pages/Persona/PersonaCRUD.html
+++ b/public/pages/Persona/PersonaCRUD.html
@@ -146,7 +146,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6 ">
                             <label class="m-2" for="F_Ingreso">F_Ingreso_Diputacion:</label>
-                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
+                            <input type="date" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
                         </div>
                         <div class="col-md-4 col-sm-6 ">
                             <label for="T_Arriba" class="m-2 form-label">T_Arriba</label>
@@ -231,7 +231,7 @@
                         </div>
                         <div class="col-sm-12 ">
                             <label class="m-2" for="F_Ingreso">F_Ingreso_Diputacion:</label>
-                            <input type="text" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
+                            <input type="date" class="form-control form-control-sm mt-1 filtro" id="F_Ingreso" data-col="2">
                         </div>
                         <div class="col-sm-12 ">
                             <label for="T_Arriba" class="m-2 form-label">T_Arriba</label>
