crud emergencia completo pero falta comprobacion

--- a/public/pages/Emergencia/vistaEmergencias.html
+++ b/public/pages/Emergencia/vistaEmergencias.html
@@ -306,15 +306,15 @@
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <label for="fechSalida" class="form-label">Fech_Salida</label>
-                            <input type="date" class="form-control" id="fechSalida">
+                            <input type="datetime-local" class="form-control" id="fechSalida">
                         </div>
                         <div class="col-md-4">
                             <label for="fechLlegada" class="form-label">Fech_Llegada</label>
-                            <input type="date" class="form-control" id="fechLlegada">
+                            <input type="datetime-local" class="form-control" id="fechLlegada">
                         </div>
                         <div class="col-md-4">
                             <label for="fechRegreso" class="form-label">Fech_Regreso</label>
-                            <input type="date" class="form-control" id="fechRegreso">
+                            <input type="datetime-local" class="form-control" id="fechRegreso">
                         </div>
                     </div>
 
