--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -13,195 +13,176 @@
     <link rel="stylesheet" href="../assets/css/header_footer.css">
     <link rel="stylesheet" href="../assets/css/plantilla_css.css">
 
-    <!-- Configuración (basePath) -->
+    <!-- Configuración -->
     <script src="../assets/javascript/config.js"></script>
-
-    <!-- Header / Footer / Sidebar -->
     <script src="../assets/javascript/header_footer.js"></script>
-
-    <!-- Scripts adicionales -->
     <script src="../assets/javascript/script_filtro_tabla.js"></script>
 
 </head>
 
 <body class="bg-white text-dark">
 
-<!-- HEADER -->
 <div id="header-placeholder"></div>
 
-<!-- LAYOUT CON SIDEBAR -->
 <div class="d-flex">
-
-    <!-- SIDEBAR -->
     <div id="sidebar-placeholder" class="sidebar-bg"></div>
 
-    <!-- CONTENIDO (TU CONTENIDO SIN CAMBIOS) -->
     <main class="p-3">
 
         <h1 class="mb-4 text-center">Home</h1>
 
         <div class="row g-3 justify-content-center">
-            <!-- 1. Intervenciones -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-fire fs-2 mb-2"></i>
-                    <span>Intervenciones</span>
-                </button>
-            </div>
 
-            <!-- 2. Libro de oficiales -->
+            <!-- Intervenciones -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-success w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-journal-text fs-2 mb-2"></i>
-                    <span>Libro de oficiales</span>
-                </button>
-            </div>
-
-            <!-- 3. Recursos -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-box-seam fs-2 mb-2"></i>
-                    <span>Recursos</span>
-                </button>
-            </div>
-
-            <!-- 4. Avisos -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-bell fs-2 mb-2"></i>
-                    <span>Avisos</span>
-                </button>
-            </div>
-
-            <!-- 5. Cuadrante -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-info w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-calendar2-week fs-2 mb-2"></i>
-                    <span>Cuadrante</span>
-                </button>
-            </div>
-
-            <!-- 6. Mapas -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-map fs-2 mb-2"></i>
-                    <span>Mapas</span>
-                </button>
-            </div>
-
-            <!-- 7. Revisiones -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-dark w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-check2-square fs-2 mb-2"></i>
-                    <span>Revisiones</span>
-                </button>
-            </div>
-
-            <!-- 8. Permisos -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-key fs-2 mb-2"></i>
-                    <span>Permisos</span>
-                </button>
-            </div>
-
-            <!-- 9. Vehículos -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-success w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-truck fs-2 mb-2"></i>
-                    <span>Vehículos</span>
-                </button>
-            </div>
-
-            <!-- 10. Categorías -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-tags fs-2 mb-2"></i>
-                    <span>Categorías</span>
-                </button>
-            </div>
-
-            <!-- 11. Tipo de Emergencia -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-exclamation-triangle fs-2 mb-2"></i>
-                    <span>Tipo de Emergencia</span>
-                </button>
-            </div>
-
-            <!-- 12. Almacenes -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-info w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-inbox fs-2 mb-2"></i>
-                    <span>Almacenes</span>
-                </button>
-            </div>
-
-            <!-- 13. Instalaciones -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-building fs-2 mb-2"></i>
-                    <span>Instalaciones</span>
-                </button>
-            </div>
-
-            <!-- 14. Usuarios -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-dark w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-people fs-2 mb-2"></i>
-                    <span>Usuarios</span>
-                </button>
-            </div>
-
-            <!-- 15. Carnets -->
-            <div class="col-6 col-sm-4 col-md-2 text-center">
-                <a href="../pages/Carnet/CarnetCRUD.html">
-                <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-credit-card fs-2 mb-2"></i>
-                    <span>Carnets</span>
-                </button>
+                <a href="../pages/Emergencia/vistaEmergencias.html">
+                    <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-fire fs-2 mb-2"></i>
+                        <span>Intervenciones</span>
+                    </button>
                 </a>
             </div>
 
-            <!-- 16. Cargos -->
+            <!-- Libro de oficiales -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-success w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-person-badge fs-2 mb-2"></i>
-                    <span>Cargos</span>
-                </button>
+                <a href="../pages/Emergencia/vistaTipoEmergencia.html">
+                    <button class="btn btn-success w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-journal-text fs-2 mb-2"></i>
+                        <span>Libro de oficiales</span>
+                    </button>
+                </a>
             </div>
 
-            <!-- 17. Formaciones -->
+            <!-- Recursos / Materiales -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-book fs-2 mb-2"></i>
-                    <span>Formaciones</span>
-                </button>
+                <a href="../pages/Materiales/vistaMateriales.html">
+                    <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-box-seam fs-2 mb-2"></i>
+                        <span>Recursos</span>
+                    </button>
+                </a>
             </div>
 
-            <!-- 18. Ediciones -->
+            <!-- Avisos -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-pencil-square fs-2 mb-2"></i>
-                    <span>Ediciones</span>
-                </button>
+                <a href="../pages/Avisos/vistaAvisos.html">
+                    <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-bell fs-2 mb-2"></i>
+                        <span>Avisos</span>
+                    </button>
+                </a>
             </div>
 
-            <!-- 19. Refuerzos -->
+            <!-- Cuadrante / Alineación -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-info w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-people-fill fs-2 mb-2"></i>
-                    <span>Refuerzos</span>
-                </button>
+                <a href="../pages/Alineacion/vistaAlineacion.html">
+                    <button class="btn btn-info w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-calendar2-week fs-2 mb-2"></i>
+                        <span>Cuadrante</span>
+                    </button>
+                </a>
             </div>
 
-            <!-- 20. Configuración -->
+            <!-- Mapas / Salidas -->
             <div class="col-6 col-sm-4 col-md-2 text-center">
-                <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
-                    <i class="bi bi-gear fs-2 mb-2"></i>
-                    <span>Configuración</span>
-                </button>
+                <a href="../pages/Salidas/vistaSalidas.html">
+                    <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-map fs-2 mb-2"></i>
+                        <span>Mapas</span>
+                    </button>
+                </a>
             </div>
+
+            <!-- Revisiones / Categorías -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Materiales/vistaCategorias.html">
+                    <button class="btn btn-dark w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-check2-square fs-2 mb-2"></i>
+                        <span>Revisiones</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Permisos / Área personal -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/AreaPersonal/vistaAreaPersonal.html">
+                    <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-key fs-2 mb-2"></i>
+                        <span>Permisos</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Vehículos -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Vehiculo/vistaVehiculo.html">
+                    <button class="btn btn-success w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-truck fs-2 mb-2"></i>
+                        <span>Vehículos</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Categorías -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Materiales/vistaCategorias.html">
+                    <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-tags fs-2 mb-2"></i>
+                        <span>Categorías</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Tipo de Emergencia -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Emergencia/vistaTipoEmergencia.html">
+                    <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-exclamation-triangle fs-2 mb-2"></i>
+                        <span>Tipo de Emergencia</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Usuarios -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Usuarios/">
+                    <button class="btn btn-dark w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-people fs-2 mb-2"></i>
+                        <span>Usuarios</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Carnets -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Carnet/CarnetCRUD.html">
+                    <button class="btn btn-primary w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-credit-card fs-2 mb-2"></i>
+                        <span>Carnets</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Formaciones -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Formacion/vistaFormaciones.html">
+                    <button class="btn btn-warning w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-book fs-2 mb-2"></i>
+                        <span>Formaciones</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- Ediciones -->
+            <div class="col-6 col-sm-4 col-md-2 text-center">
+                <a href="../pages/Edicion/vistaEdiciones.html">
+                    <button class="btn btn-danger w-100 py-3 d-flex flex-column align-items-center">
+                        <i class="bi bi-pencil-square fs-2 mb-2"></i>
+                        <span>Ediciones</span>
+                    </button>
+                </a>
+            </div>
+
         </div>
 
         <hr>
@@ -267,18 +248,12 @@
                 <p>Mapa</p>
             </div>
         </div>
-
     </main>
 </div>
 
-<!-- FOOTER -->
 <div id="footer-placeholder"></div>
 
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
-
-
-
