--- a/public/pages/Emergencia/vistaEmergencias.html
+++ b/public/pages/Emergencia/vistaEmergencias.html
@@ -71,7 +71,7 @@
                         <label class="m-2" for="grupo">Estado:</label>
                         <select class="form-select form-select-sm mt-1 filtro" id="grupo" data-col="2">
                             <option value="">Todos</option>
-                            <option>Abierta</option>
+                            <option>Activa</option>
                             <option>Cerrada</option>
                         </select>
                     </div>
@@ -326,6 +326,18 @@
                                 <option value="">Seleccione vehículo...</option>
                                 <option value="1">Vehículo 1</option>
                                 <option value="2">Vehículo 2</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- Personal -->
+                    <div class="row mb-4">
+                        <div class="col-md-6">
+                            <label for="personal" class="form-label">Personal Asignado</label>
+                            <select class="form-select" id="personal">
+                                <option value="">Seleccione personal...</option>
+                                <option value="1">Equipo 1</option>
+                                <option value="2">Equipo 2</option>
                             </select>
                         </div>
                     </div>
