vista emergencias activas

--- a/public/pages/Emergencia/vistaEmergencias.html
+++ b/public/pages/Emergencia/vistaEmergencias.html
@@ -155,11 +155,11 @@
                         </select>
                     </div>
                     <div class="col-mg-6 col-lg-4">
-                        <label for="operador" class="form-label">Nom Operador</label>
+                        <label for="operador" class="form-label">Nombre Operador</label>
                         <input type="text" class="form-control" id="operador" name="operador">
                     </div>
                     <div class="col-mg-6 col-lg-4">
-                        <label for="solicitante" class="form-label">Nom Solicitante</label>
+                        <label for="solicitante" class="form-label">Nombre Solicitante</label>
                         <input type="text" class="form-control" id="solicitante" name="solicitante">
                     </div>
                 </div>
