--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -149,10 +149,12 @@
                     
                     <!-- 13. Instalaciones -->
                     <div class="col-6 col-sm-4 col-md-2 text-center">
-                        <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
-                            <i class="bi bi-building fs-2 mb-2"></i>
-                            <span>Instalaciones</span>
-                        </button>
+                        <a href="../pages/Instalaciones/vistaInstalaciones.html">
+                            <button class="btn btn-secondary w-100 py-3 d-flex flex-column align-items-center">
+                                <i class="bi bi-building fs-2 mb-2"></i>
+                                <span>Instalaciones</span>
+                            </button>
+                        </a>
                     </div>
                     
                     <!-- 14. Usuarios -->
