--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Home</title>
-        <!-- Bootstrap CSS -->
+            <!-- Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-        <!-- CSS del proyecto -->
-        <link rel="stylesheet" href="../assets/css/header_footer.css">
-        <link rel="stylesheet" href="../assets/css/plantilla_css.css">
-        <!-- Configuración (basePath) -->
-        <script src="../assets/javascript/config.js"></script>
-        <!-- Header / Footer / Sidebar -->
-        <script src="../assets/javascript/header_footer.js"></script>
-        <!-- Scripts adicionales -->
-        <script src="../assets/javascript/script_filtro_tabla.js"></script>
-    </head>
+
+        <!-- Configuración y Header/Footer -->
+        <script src="/frontend/javascript/config.js"></script>
+        <script src="/frontend/javascript/header_footer.js" defer></script>
+
+        <script>
+            // Cargar CSS del proyecto
+            loadCSS("plantilla_css.css");
+            loadCSS("header_footer.css");
+        </script>
+</head>
     <body class="bg-white text-dark">
         <!-- HEADER -->
         <div id="header-placeholder"></div>
