--- a/frontend/pages/Emergencia/vistaEmergenciasActivas.html
+++ b/frontend/pages/Emergencia/vistaEmergenciasActivas.html
@@ -9,20 +9,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <!-- CSS del proyecto -->
-    <link rel="stylesheet" href="../../assets/css/header_footer.css">
-    <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
+    <link rel="stylesheet" href="frontend/assets/css/header_footer.css">
+    <link rel="stylesheet" href="frontend/assets/css/plantilla_css.css">
 
     <!-- Configuración (basePath) -->
-    <script src="../../assets/javascript/config.js"></script>
-
+    <script src="frontend/assets/javascript/config.js"></script>
     <!-- Script Filtro de la tabla -->
-    <script src="../../assets/javascript/script_filtro_tabla.js"></script>
+    <script src="frontend/assets/javascript/script_filtro_tabla.js"></script>
 
     <!-- Header / Footer / Sidebar -->
-    <script src="../../assets/javascript/header_footer.js"></script>
+    <script src="frontend/assets/javascript/header_footer.js"></script>
 
     <!-- Script Emergencias activas -->
-    <script src="../../assets/javascript/emergencias_activas.js"></script>
+    <script src="frontend/assets/javascript/emergencias_activas.js"></script>
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
