--- a/frontend/pages/Alineacion/vistaAlineacion.html
+++ b/frontend/pages/Alineacion/vistaAlineacion.html
@@ -17,13 +17,9 @@
         loadCSS("plantilla_css.css");
     </script>
 
-    <!-- JS del proyecto usando loadJS() -->
-    <script>
-        // Se usa loadJS() definido en config.js
-        loadJS("header_footer.js");
-        loadJS("script_filtro_tabla.js");
-    </script>
-
+    <!-- JS dependientes -->
+    <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
