--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
         <!-- Configuración y Header/Footer -->
-        <script src="/frontend/javascript/config.js"></script>
+        <script src="/frontend/config/config.js"></script>
         <script src="/frontend/javascript/header_footer.js" defer></script>
 
         <script>
