--- a/frontend/pages/Edicion/vistaEdiciones.html
+++ b/frontend/pages/Edicion/vistaEdiciones.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <!-- Configuración y rutas absolutas -->
-    <script src="/frontend/javascript/config.js"></script>
+    <script src="/frontend/config/config.js"></script>
 
     <!-- CSS del proyecto usando loadCSS() -->
     <script>
