--- a/frontend/pages/Cuadrante/vistaCuadranteAnual.html
+++ b/frontend/pages/Cuadrante/vistaCuadranteAnual.html
@@ -49,7 +49,7 @@
 
             <p>[Migas de pan]</p>
             <div class="container-fluid calendar-main">
-                
+
                 <div id="year_elems_placeholder" class="d-flex justify-content-center align-items-center gap-2 mb-3">
                 </div>
 
@@ -58,6 +58,54 @@
                     <div id="calendar" class="row g-4"></div>
                 </div>
             </div>
+
+            <!-- LEYENDA + HORAS -->
+            <div class="justify-content-center cuadrante-bottom mt-4">
+
+                <div class="d-flex justify-content-between align-items-start mb-3">
+                    <div class="leyenda-box">Leyenda</div>
+                    <button class="btn btn-outline-secondary btn-sm">Horas asignadas</button>
+                </div>
+
+                <div class="detalles-label mb-1">Detalles</div>
+
+                <table class="table table-bordered detalles-table">
+                    <thead>
+                        <tr>
+                            <th>Guardias</th>
+                            <th>G.Asignadas</th>
+                            <th>H.Adicionales</th>
+                            <th>Permisos</th>
+                            <th>Dif. Guardias</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
         </main>
     </div>
 
