--- a/frontend/pages/Cuadrante/vistaCuadranteAnual.html
+++ b/frontend/pages/Cuadrante/vistaCuadranteAnual.html
@@ -17,6 +17,8 @@
         loadCSS("header_footer.css");
         loadCSS("plantilla_css.css");
         loadCSS("vistaCuadranteAnual.css");
+        // Cargar favicon dinámicamente
+        loadFavicon("favicon.png");
     </script>
 
     <!-- JS dependientes -->
