--- a/frontend/pages/Materiales/vistaCategorias.html
+++ b/frontend/pages/Materiales/vistaCategorias.html
@@ -15,6 +15,8 @@
     <script>
         loadCSS("header_footer.css");
         loadCSS("plantilla_css.css");
+        // Cargar favicon dinámicamente
+        loadFavicon("favicon.png");
     </script>
 
     <!-- JS dependientes -->
