Añadido href de  permiso a sidebar

--- a/frontend/pages/Permiso/vistaPermiso.html
+++ b/frontend/pages/Permiso/vistaPermiso.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
 
     <!-- Configuración (basePath) -->
-    <script src="../../assets/javascript/config.js"></script>
+    <script src="/frontend/config/config.js"></script>
 
     <!-- Script Filtro de la tabla -->
-    <script src="../../assets/javascript/script_filtro_tabla.js"></script>
+    <script src="/frontend/javascript/script_filtro_tabla.js"></script>
 
     <!-- Header / Footer / Sidebar -->
-    <script src="../../assets/javascript/header_footer.js"></script>
+    <script src="/frontend/javascript/header_footer.js"></script>
 
  <!-- FullCalendar -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@latest/main.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
         <!-- CONTENIDO PRINCIPAL -->
         <main class="p-3 w-100">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="mb-0">Control de Turnos de Refuerzo</h1>
+                <h1 class="mb-0">Permiso</h1>
                 <!-- Icono de ayuda que redirige a Notion -->
                 <a href="https://www.notion.so/TU_PAGINA" target="_blank" 
                    class="text-dark" title="Abrir ayuda en Notion">
